<resources>
    <string name="app_name">Traffic police APP</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_tv_splash">执法助手</string>
    <string name="app_guide_tv">引导页</string>
    <string name="point_three_bt">进入主页</string>
    <string name="login_et_name">用户名</string>
    <string name="login_et_password">密码</string>
    <string name="login_bt_login">登录</string>
    <string name="login_bt_lg">注册</string>
    <string name="login_cb">记住密码</string>
    <string name="login_lin_tv">忘记密码</string>
    <string name="activity_label_login">登录</string>
    <string name="activity_label_registered">注册</string>
    <string name="regis_et_user">用户名</string>
    <string name="regis_et_age">年龄</string>
    <string name="regis_et_desc">简介</string>
    <string name="regis_et_id">交警编号</string>
    <string name="regis_rb_boy">男</string>
    <string name="regis_rb_girl">女</string>
    <string name="regis_et_pass">密码</string>
    <string name="regis_et_password">再输入一次</string>
    <string name="regis_et_email">邮箱</string>
    <string name="regis_tv_tx">注册成功需要前往邮箱验证，否则无法登录！</string>
    <string name="regis_btn">注册</string>
    <string name="activity_forget">密码重置</string>
    <string name="forget_tv_xg">修改密码</string>
    <string name="forget_et_old">旧密码</string>
    <string name="forget_et_new">新密码</string>
    <string name="forget_et_newagain">再次输入密码</string>
    <string name="forget_btn_xg">修改密码</string>
    <string name="forget_tv_forget">忘记密码</string>
    <string name="forget_et_email">邮箱</string>
    <string name="forget_btn_fg">忘记密码</string>
    <string name="dialog_tv">正在登陆…</string>
    <string name="user_edit_user">编辑资料</string>
    <string name="user_tv_name">姓名：</string>
    <string name="user_tv_sex">性别：</string>
    <string name="user_tv_age">年龄：</string>
    <string name="user_tv_number">交警编号：</string>
    <string name="user_tv_desc">简介：</string>
    <string name="user_btn_ok">确定修改</string>
    <string name="user_btn_back">退出登录</string>
    <string name="activity_user">个人中心</string>
    <string name="dialog_btn_camera">拍照</string>
    <string name="dialog_btn_picture">图库</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="paper_item_tv1">智能</string>
    <string name="paper_item_tv2">简洁</string>
    <string name="nav_personal">个人中心</string>
    <string name="nav_scan">扫一扫</string>
    <string name="nav_item_share">二维码分享</string>
    <string name="nav_item_about">关于软件</string>
    <string name="nav_item_location">我的位置</string>
    <string name="main_item_caidan">菜单</string>
    <string name="activity_setting_personal1">个人中心</string>
    <string name="activity_setting_personal2">个人信息浏览或者编辑</string>
    <string name="activity_setting_scan1">扫一扫</string>
    <string name="activity_setting_scan2">扫描二维码或者条形码</string>
    <string name="activity_setting_code1">二维码分享</string>
    <string name="activity_setting_code2">把自己分享给朋友吧</string>
    <string name="activity_setting_location1">我的位置</string>
    <string name="activity_setting_location2">时刻掌握自身位置</string>
    <string name="avtivity_setting">设置</string>
    <string name="activity_qrcode">我的二维码</string>
    <string name="activity_location">我的位置</string>
    <string name="activity_about">关于软件</string>
    <string name="text_app_name">“应用号：</string>
    <string name="text_version">“版本号：v1.0”</string>
    <string name="text_website_address">“官网：www.huohaojie.com\"</string>
    <string name="location_btn_tt1">我的位置</string>
    <string name="dialog_btn_ok">确定</string>
    <string name="activity_wechatactivity">微信精选</string>
    <string name="pager_one_url"><![CDATA[https://mp.weixin.qq.com/s?src=16&ver=546&timestamp=1513155413&signature=JVvzsuJVyVEsLDNEEANVe-G3noBmVOnGhur9GwOHKqhe4-EKA*5mPRGwGQaE2fQyb5sUopbU1vi1p5OlBiAEfQFq5RFPvMCX4Fi6tdDnkyc=]]></string>
    <string name="pager_one_title">给形式主义官僚主义画个像：表态多调门高、行动少落实差</string>
    <string name="pager_two_title">习近平：擦清历史的镜子，走好未来的路</string>
    <string name="pager_two_url"><![CDATA[https://mp.weixin.qq.com/s?src=16&ver=546&timestamp=1513155549&signature=6iWKyGYTXCmT1sad7UYXI7jtWPUHoNO1*MnBtfNQjhp-yuuZLZ-DrvRhYKPLNRuMHKQYFoaf*Mfk1LA7TP4GmNDcJ88yTe*DNXKu-SkSAhk=]]></string>
    <string name="pager_three_title">勇挑重担，攻坚克难！新区交警率先完成黄标车淘汰任务</string>
    <string name="pager_three_url"><![CDATA[https://mp.weixin.qq.com/s?src=16&ver=546&timestamp=1513156132&signature=GSBDnM5fk1Ob9etVnGsCXwAm8MEIn5tI9Yv8BV9wxe*BhVXkPUQus0pQLyABVCs-JUuo69gEQm3bVn9Jp33-cDV5C5SQgSI7xLosU*MhLbQ=]]></string>
    <string name="activity_infor_title">车辆违章信息录入</string>
</resources>
