<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/user_64"
            android:title="@string/nav_personal" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_scan"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_item_share" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/location_64"
            android:title="@string/nav_item_location" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_item_about" />
    </group>


</menu>
