<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_tv_xg"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/et_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forget_et_old"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/et_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forget_et_new"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forget_et_newagain"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_btn_xg"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forget_tv_forget"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forget_et_email" />
    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_btn_fg"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"/>


</LinearLayout>