<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginBottom="30dp"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp"/>
    <EditText
        android:id="@+id/et_name"
        android:hint="@string/login_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/login_et_password"
        android:hint="@string/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/keep_password"
            android:text="@string/login_cb"
            android:textColor="@color/colorAccent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_bt_login"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/btn_registered"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_bt_lg"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forget"
            android:text="@string/login_lin_tv"
            android:textColor="@color/colorAccent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>