<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/setting_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--个人中心-->
    <LinearLayout
        android:id="@+id/ll_personal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_setting_personal1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/activity_setting_personal2"
            android:textSize="14sp" />

    </LinearLayout>

    <!--扫一扫-->
    <LinearLayout
        android:id="@+id/ll_scan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_setting_scan1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:textColor="@color/color_black"
            android:id="@+id/tv_scan_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/activity_setting_scan2"
            android:textSize="14sp" />

    </LinearLayout>

    <!--我的二维码-->
    <LinearLayout
        android:id="@+id/ll_qr_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_setting_code1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/activity_setting_code2"
            android:textSize="14sp" />

    </LinearLayout>

    <!--我的位置-->
    <LinearLayout
        android:id="@+id/ll_my_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_setting_location1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:id="@+id/textView" />

        <TextView
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/activity_setting_location2"
            android:textSize="14sp" />

    </LinearLayout>

    <!--关于软件-->
    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="关于软件"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="www.huohaojie.com"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>