<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--卡片-->
        <LinearLayout
            android:background="@drawable/geren"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/add_pic"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary"/>
            <TextView
                android:id="@+id/edit_user"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:background="@drawable/button_bg"
                android:text="@string/user_edit_user"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <!--用户名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_tv_name"
                android:textSize="20dp" />
            <EditText
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_username"/>
        </LinearLayout>


        <!--性别-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_tv_sex"
                android:textSize="20dp" />
            <EditText
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_sex"/>
        </LinearLayout>


        <!--年龄-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_tv_age"
                android:textSize="20dp" />
            <EditText
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_age"/>
        </LinearLayout>


        <!--交警编号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_tv_number"
                android:textSize="20dp" />
            <EditText
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_id"/>
        </LinearLayout>

        <!--交警编号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_tv_desc"
                android:textSize="20dp" />
            <EditText
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_desc"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_update_ok"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:textColor="@android:color/white"
            android:text="@string/user_btn_ok"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.5"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/btn_exit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:text="@string/user_btn_back"/>

    </LinearLayout>
</ScrollView>